--- a/app/assets/stylesheets/teams.scss
+++ b/app/assets/stylesheets/teams.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Teams controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.team-img {
+    position: relative; 
+    left: 0px;
+    width: 300px;
+    height: 300px;
+  }
