--- a/app/views/divisions/show.html.erb
+++ b/app/views/divisions/show.html.erb
@@ -2,9 +2,10 @@
     <h1><%= @division.region %> 
     
     <h1>Teams in this division</h1> 
-    <% @division.teams.uniq.each do |team| %> 
-        <p><%= link_to team.name, team_path(team) %> 
+    <% @division.teams.select do |team| %> 
+        <% if @conference.teams.name == @division.teams.name %>
+            <p><%= link_to team.name, team_path(team) %> 
+        <% end %>
     <% end %> 
 
-    <h2><%= button_to "Back", divisions_path, method: :get %></h2> 
-</div>
+    <h2><%= button_to "Back", divisions_path, method: :get %></h2>
