seeded miami dolphins games

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -30,5 +30,8 @@
             </tbody> 
         </table> 
     <% end %> 
+    <p>Based on this game's analysis, we have seen that the winning teams on 
+    average have higher passing yards and higher rushing yards than the losing team. 
+    Time of possession is a significant factor in completely one sided games but has a reduced impact in even contests.</p> 
     <h2><%= button_to "Back", games_path, method: :get %></h2> 
 </div>
