--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,20 +11,11 @@
   </head>
 
   <body>
-    <nav class="nav_links">
-      <ul>
-        <li><%= link_to "SDX", root_path %></li>
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "About", root_path %></li>
-        <li><%= link_to "Account", addresses_path %> 
-          <ul><li><%= link_to "Manage Account", addresses_path %></li>
-            <li><%= link_to "Manage Premium Account", payments_path %></li></ul></li> 
-        <li><%= link_to "Theoretical Game Prediction", conferences_path %>
-          <ul><li><%= link_to "Teams", teams_path %></li> 
-            <li><%= link_to "Games", games_path %></li></ul></li> 
-        </ul>
-      </div>
-    </nav>
-    <%= yield %>
+    <%= render 'layouts/navigation' %>
+    <div id="page-content">
+      <%= render 'layouts/messages' %>
+      <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
