--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -7,110 +7,15 @@
 <div class="container mt-2">
       <div class="row">
         <div class="col-12">
-          <div class="jumbotron">
-			  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-				  <div class="carousel-inner">
-					  <div class="carousel-item active">
-						  <img class="d-block w-100" src="images/ezgif-3-1223cc5d6cdd.gif" alt="First slide">
-					  </div>
-
-					  <div>
-						  <h1 class="text-center">Sports Data Xchange</h1>
-					  </div>
-					  <div class="row justify-content-center" class ="bg-transparent">
-						  <div class="col-auto">
-						  <img src="images/SDXLOGO.png" alt="" width="1200" height="675" class="img-fluid img-thumbnail">
-						  </div>
-					  </div>
-					  <div class="row justify-content-center">
-						  <div class="col-auto">
-							  <p><a class="btn btn-success btn-lg" href="#" data-toggle="modal" data-target="#PredictGameModal" role="button">Predict Game</a> </p>
-						  </div>
-						  <div class="col-auto">
-							  <p><a class="btn btn-primary btn-lg" href="#" data-toggle="modal" data-target="#FantasyGameModal" role="button">Fantasy Match</a> </p>
-						  </div>  
-					  </div>
-					  
-					  
-					  <div id="PredictGameModal" class="modal fade" role="dialog"> <!-- Modal -->
-						  <div class="modal-dialog">
-							  <div class="modal-content"> <!-- Modal content-->
-								  <div class="modal-header">
-									  <button type="button" class="close" data-dismiss="modal">&times;</button>
-									  <h4 class="modal-title">Predict Game</h4>
-								  </div>
-								  <div class="modal-body">
-									  <img src="images/ezgif-3-1223cc5d6cdd.gif" alt="" width="1200" height="675" class="img-fluid img-thumbnail">
-									  <div>
-										  <form action="/action_page.php">
-											  <label for="PredictGame">Please select an upcoming game: </label>
-											  <select id="PredictGame" name="PredictGame">
-												  <option value="Select Upcoming Game"></option>
-												  <option value="GameA">12/29/19: Packers vs. Lions</option>
-												  <option value="GameB">12/29/19: Jets vs Bills</option>
-												  <option value="GameC">12/29/19: Rams vs. 49ers</option>
-											  </select>
-										  </form>
-										  <p><a class="btn btn-success btn-lg" href="#" role="button">Predict Game</a> </p>
-									  </div>
-									  <p>Predict Game coming soon!.</p>
-								  </div>
-								  <div class="modal-footer">
-									  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-								  </div>
-							  </div>
-						  </div>
-					  </div>
-				  </div>
-				  <div id="FantasyGameModal" class="modal fade" role="dialog">
-					  <div class="modal-dialog">
-						  <div class="modal-content"> <!-- Modal content-->
-							  <div class="modal-header">
-								  <button type="button" class="close" data-dismiss="modal">&times;</button>
-								  <h4 class="modal-title">Fantasy Game</h4>
-							  </div>
-							  <div class="modal-body">
-								  <img src="images/ezgif-3-1223cc5d6cdd.gif" alt="" width="1200" height="675" class="img-fluid img-thumbnail">
-								  <form action="/action_page.php">
-									  <label for="FantasyTeamA">Please select an upcoming game: </label>
-									  <select id="FantasyTeamA" name="FantasyTeamA">
-										  <option value="Select Upcoming Game"></option>
-										  <option value="Packers">Packers</option>
-										  <option value="Jets">Jets</option>
-										  <option value="Rams">Rams</option>
-									  </select>
-								  </form>
-								  <form action="/action_page.php">
-									  <label for="FantasyTeamB">Please select an upcoming game: </label>
-									  <select id="FantasyTeamB" name="FantasyTeamB">
-										  <option value="Select Upcoming Game"></option>
-										  <option value="Lions">Lions</option>
-										  <option value="Bills">Bills</option>
-										  <option value="49ers">49ers</option>
-									  </select>
-								  </form>
-								  <form action="/action_page.php">
-									  <label for="FantasyDateA">Please select an upcoming game: </label>
-									  <select id="FantasyDateA" name="FantasyDateA">
-										  <option value="Select Year"></option>
-										  <option value="2015">2015</option>
-										  <option value="2016">2016</option>
-										  <option value="2017">2017</option>
-									  </select>
-								  </form>
-								  <p><a class="btn btn-success btn-lg" href="#" role="button">Fantasy Game</a> </p>
-								  <p>Fantasy Game coming soon!.</p>
-							  </div>
-							  <div class="modal-footer">
-								  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-							  </div>
-						  </div>
-					  </div>
-				  </div>
-			  </div>
-			</div>
-			<p class="text-center">The answer to all your questions, at your fingertips...</p>
-		  </div>
+          <div class="container" id="home-container">
+  <div class="jumbotron text-center text-white">
+    <h1 class="display-4">Alpha Blog</h1>
+    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <hr class="my-4">
+    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    
+  </div>
+</div>
         </div>
       </div>
 	  </div>
