--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Teams</h1> 
-
-<table> 
+<h1 class="text-center mt-4">Teams</h1> 
+<div>
+<table table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
             <th>Conference</th> 
@@ -22,3 +22,4 @@
         <% end %> 
     </tbody> 
 </table> 
+</div>
