Some extra touches before going to master

--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,15 +1,14 @@
-<h1>Payment History</h1> 
+<h1 class="text-center mt-4">Payment History</h1> 
 
 <div><%= link_to 'Adding Payment Details', new_payment_path %></div> 
 <br /> 
 
-<table> 
+<table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
             <th>Payment Type</th> 
             <th>First Payment</th> 
             <th>Last Payment</th> 
-            <th></th> 
         </tr> 
     </thead> 
     <tbody> 
