--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container"> 
-    <h3><%= @team.name %></h3> 
-    <h3><%= @team.city %></h3>  
+    <h1 class="text-center mt-4"><%= @team.name %></h1> 
+    <h3 class="text-center mt-4"><%= @team.city %></h3>  
     <img class='team-img' src="<%= @team.image %>" alt="<%@team.name%>"> 
     
     <h1>All games played by this team</h1> 
     <% @team.games.uniq.each do |game| %> 
-        <p><%= link_to game.name, game_path(game) %></p>
+        <p class="center"><%= link_to game.name, game_path(game) %></p>
     <% end %> 
     <h2><%= button_to "Back", teams_path, method: :get %></h2> 
 </div>
