--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,7 +1,7 @@
 <h1>My Locations</h1> 
 <div><%= link_to 'Create_Address', new_address_path %></div> 
 <br /> 
-<table> 
+<table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
             <th>Address Type</th> 
