--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Divisions</h1> 
 
-<table> 
+<table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
             <th>Region</th> 
