--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Games</h1> 
 
-<table> 
+<table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
             <th>Name</th> 
