--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-center mt-4">Teams</h1> 
 <div>
-<table table style="margin-left:auto;margin-right:auto;"> 
+<table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
             <th>Conference</th> 
