--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,18 +1,18 @@
 
 
-<p class="text-center mt-1">Hi, <%= @user.name %></p> 
-<%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %> 
-    <input type=submit value='logout'> 
-<% end %> 
+<p class="text-center mt-1">
+Hi, <%= @user.name %>
+</p> 
+
 <div class="container mt-2">
       <div class="row">
         <div class="col-12">
           <div class="container" id="home-container">
   <div class="jumbotron text-center text-white">
-    <h1 class="display-4">Alpha Blog</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+    <h1 class="display-4">Sports Data Xchange</h1>
+    <p class="lead">Your #1 choice when predicting Football!</p>
     <hr class="my-4">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <p></p>
     
   </div>
 </div>
@@ -45,9 +45,16 @@
         </div>
       </div>
     </div>
+
     <hr>
 
+    <div class="center">
+
+
+
 	  <hr>
+
+    </div>
 	  <div class="container">
       <div class="row">
         <div class="text-center col-md-6 col-12">
@@ -91,6 +98,10 @@
       </div>
     </div>
     <hr>
+
+    <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %> 
+    <input type=submit value='logout'> 
+    <% end %> 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.4.1.min.js"></script>
