fixed navbar overlay

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,9 @@
 @import 'bootstrap/dist/css/bootstrap';
 
+body{
+    padding-top:100px;
+   }
+
 nav { position: relative;
     left: auto;
     top: 0px;
