--- a/app/views/conferences/index.html.erb
+++ b/app/views/conferences/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Conferences</h1> 
-
+<h1 class="text-center mt-4">Conferences</h1> 
+<hr>
 <table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
