--- a/app/views/divisions/index.html.erb
+++ b/app/views/divisions/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Divisions</h1> 
-
+<h1 class="text-center mt-4">Divisions</h1> 
+<hr>
 <table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
         <tr> 
