--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container"> 
-    <h3>Name: <%= @game.name %></h3> 
-    <h3>Winner: <%= @game.winner %></h3> 
-    <h3>Loser: <%= @game.loser %></h3>
-    <h3>Game Time: <%= @game.gametime %></h3> 
-    <h1>Game stats are as follows</h1> 
+    <h1 class="text-center mt-4"><%= @game.name %></h3> 
+    <h4 class="text-center">Winner: <%= @game.winner %></h3> 
+    <h5 class="text-center">Loser: <%= @game.loser %></h3>
+    <p class="text-center">Game Time: <%= @game.gametime %></h3> 
+    <h2 class="text-center mt-4">Game stats are as follows</h1> 
     
-    <table> 
+    <table style="margin-left:auto;margin-right:auto;"> 
         <thead> 
             <tr>
                 <th>Team Name</th> 
@@ -31,7 +31,7 @@
             <% end %>
         </tbody> 
     </table> 
-     
+     <hr>
     <p>Based on this game's analysis, we have seen that the winning teams on 
     average have higher passing yards and higher rushing yards than the losing team. 
     Time of possession is a significant factor in completely one sided games but has a reduced impact in even contests.</p> 
