--- a/app/assets/stylesheets/payments.scss
+++ b/app/assets/stylesheets/payments.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the Payments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.add_payment {
+    text-align: center;
+}
