--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,5 +1,5 @@
 <h1>My Locations</h1> 
-<div><%= link_to 'Create_Address', new_address_path %></div> 
+<div class="create_address"><%= link_to 'Create_Address', new_address_path %></div> 
 <br /> 
 <table style="margin-left:auto;margin-right:auto;"> 
     <thead> 
