fixed the logout button

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -92,11 +92,11 @@ Hi, <%= @user.name %>
       </div>
     </div>
     <hr>
-
+  <div class="logout"> 
     <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %> 
     <input type=submit value='logout'> 
     <% end %> 
-
+  </div> 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.4.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
