fixed the address show page

--- a/app/assets/stylesheets/addresses.scss
+++ b/app/assets/stylesheets/addresses.scss
@@ -3,4 +3,8 @@
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .create_address {
     text-align: center;
+} 
+
+.locations {
+    text-align: center;
 }
