--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,11 +1,11 @@
 <div class="locations"> 
     <h1><%= @address.address_type %></h1> 
-    <h3><%= @address.address_line_1 %></h3> 
-    <h3><%= @address.address_line_2 %></h3> 
-    <h3><%= @address.city %></h3> 
-    <h3><%= @address.state %></h3> 
-    <h3><%= @address.zipcode %></h3> 
-    <h3><%= @address.country %></h3> 
+    <p><%= @address.address_line_1 %></p> 
+    <p><%= @address.address_line_2 %></p> 
+    <p><%= @address.city %></p> 
+    <p><%= @address.state %></p> 
+    <p><%= @address.zipcode %></p> 
+    <p><%= @address.country %></p> 
     <%= button_to 'Delete', address_path, method: :delete, data: { confirm: 'Are you sure you want to delete this address?' } %> 
     <%= button_to 'Edit', edit_address_path, method: :get %> 
     <%= button_to 'Back', addresses_path, method: :get %> 
