Late nite touches
Attempted to add an about page, was unable to.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<h1>New User</H1>
+
 <%= form_for @user, controller: 'users', action: 'create' do |f| %> 
     <div class="field"> 
         <%= f.label :name %> 
