--- a/app/views/conferences/show.html.erb
+++ b/app/views/conferences/show.html.erb
@@ -1,9 +1,10 @@
 <div class="container"> 
     <h1><%= @conference.name %> 
     
-    <h1>Divisions in this Conference:</h1> 
+    <h2>Divisions in this Conference:</h2> 
     <% @conference.divisions.uniq.each do |division| %> 
         <p><%= link_to division.region, division_path(division) %>  
+         <hr style="width:50%"> 
     <% end %> 
 
     <h2><%= button_to "Back", conferences_path, method: :get %></h2> 
