Fixed address views

--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,15 +1,31 @@
 <div class="locations"> 
 <h1><%= @address.address_type %></h1> 
 
-        
-    <p><%= @address.address_line_1 %></p> 
-    <p><%= @address.address_line_2 %></p> 
-    <p><%= @address.city %></p> 
-    <p><%= @address.state %></p> 
-    <p><%= @address.zipcode %></p> 
-    <p><%= @address.country %></p> 
+
+    <table style="width:100%">
+  <tr>
+    <th>Address Line 1</th>
+    <th>Adress Line 2</th>
+    <th>City</th>
+    <th>State</th>
+    <th>Zip</th>
+    <th>Country</th>
+    <th>
+
+  </tr>
+  <tr>
+    <td><%= @address.address_line_1 %></td>
+    <td><%= @address.address_line_2 %></td>
+    <td><%= @address.city %></td>
+    <td><%= @address.state %></td>
+    <td>><%= @address.zipcode %></td>
+    <td><%= @address.country %></td>
+    <td>
     <%= button_to 'Delete', address_path, method: :delete, data: { confirm: 'Are you sure you want to delete this address?' } %> 
     <%= button_to 'Edit', edit_address_path, method: :get %> 
+    </td>
+  </tr>
+</table>
     <%= button_to 'Back', addresses_path, method: :get %> 
 
 </div>
