--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="text-center mt-4">Payment History</h1> 
 
-<div class="add_payment"><%= link_to 'Adding Payment Details', new_payment_path %></div> 
+<div class="add_payment"><%= link_to 'Add Payment', new_payment_path %></div> 
 <br /> 
 
 <table style="margin-left:auto;margin-right:auto;"> 
