--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,15 +1,23 @@
 <div class="container"> 
     <h1>Show Payment Details</h1> 
 
-    <h3><%= @payment.payment_type %></h3> 
+    <table>  
+        <tr>
+            <th>Payment Type</th>
+            <th>Initiated</th>
+            <th>Last Updated</th>
+            <th></th>
+        </tr>
+        <tr>
+            <td><%= @payment.payment_type %></td>
+            <td><%= @payment.created_at %></td>
+            <td><%= @payment.updated_at %></td>
+            <td><%= button_to 'Edit', edit_payment_path, method: :get %></td>
+        </tr>
+    </table>
 
-    <h3><%= @payment.created_at %></h3> 
+    <hr>
 
-    <h3><%= @payment.updated_at %></h3> 
-
-    <h2><%= button_to "Back", payments_path, method: :get %></h2> 
-    
-    <h2><%= button_to 'Edit', edit_payment_path, method: :get %></h2> 
 
     <h2><%= button_to 'Back', payments_path, method: :get %></h2> 
 </div> 
