--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,13 @@
         <li><%= link_to "Theoretical Game Prediction Statistics", conferences_path %>
           <ul><li><%= link_to "Teams", teams_path %></li> 
             <li><%= link_to "Games", games_path %></li></ul></li> 
+        <% if user_signed_in? %>
+          <li><%= link_to current_user.email, edit_user_registration_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Signup", new_user_registration_path %></li>
+          <li><%= link_to "Login", new_user_session_path %></li> 
+        <% end %> 
         </ul>
     </div>
     <div>
