--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,7 +1,6 @@
 <%= form_for @payment do |f| %> 
     <div class="field"> 
-        <%= f.label :user_id %> 
-        <%= f.collection_select :user_id, @users, :id, :name %> 
+        <%= f.hidden_field :user_id, :value => current_user.id %>  
     </div> 
     <div class="field"> 
         <%= f.label :payment_type %> 
