--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,9 +1,5 @@
 
 
-<p class="text-center mt-1">
-Hi, <%= @user.name %>
-</p> 
-
 <div class="container mt-2">
       <div class="row">
         <div class="col-12">
@@ -60,7 +56,7 @@ Hi, <%= @user.name %>
         <div class="text-center col-md-6 col-12">
           <h3>Join for Free</h3>
           <p>Get access to using our "Fantasy Match" program, where you can compare the performance of teams in hypothetical games.</p>
-          <p><%= link_to "Sign Up", addresses_path %></p> 
+          <p><%= link_to "Sign Up", new_user_registration_path %></p> 
         </div>
         <div class="text-center col-md-6 col-12">
           <h3>Go Premium</h3>
@@ -92,13 +88,3 @@ Hi, <%= @user.name %>
       </div>
     </div>
     <hr>
-  <div class="logout"> 
-    <%= form_tag ({controller: 'sessions', action: 'destroy', method: 'post'}) do %> 
-    <input type=submit value='logout'> 
-    <% end %> 
-  </div> 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap-4.4.1.js"></script>
